# shearline

./: ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
examples/: claude_desktop_config.json  severe_day_prompt.md
fixtures/: _latest_keys_raw.json  _mesh.grib2  _mesh.grib2.5b7b6.idx  _rap_20260610_listing.html  _rap_prod_listing.html  _rotml60.grib2  _rotml60.grib2.5b7b6.idx  goes_glm_lcfa_sample.nc  goes_glm_notes.json  hrrr_decode_notes.json  hrrr_wrfprsf00.idx  iem_lsr_bypoint_sample.geojson  iem_lsr_historical_notes.json  iem_lsr_historical_sample.geojson  iem_lsr_notes.json  iem_lsr_sample.geojson  mcp_packaging_notes.json  mrms_catalog.json  ncei_storm_events_notes.json  ncei_stormevents_details_1950_head.csv  ncei_swdiws_datasets.xml  ncei_swdiws_nx3hail_point_20110524.csv  ncei_swdiws_nx3hail_point_20110524.geojson  ncei_swdiws_nx3mda_bbox_20110524.csv  ncei_swdiws_nx3tvs_bbox_20110524.csv  ncei_swdiws_usage_docs.txt  nexrad_l2_listing_notes.json  nexrad_station_table.txt  nws_alert_svr_sample.json  nws_alert_tor_sample.json  nws_alerts_point_moore.json  python_sdk_smoke_stdio.json  python_sdk_smoke_streamable_http.json  rap_decode_notes.json  rap_filter_404_response.html  rap_filter_form_page.html  rap_filter_url_moore.txt  rap_forecast_hours_notes.json  rap_subset_moore.grib2  rap_subset_okc_f03.grib2  (+17 more)
scripts/: canary.py  launch.command  smoke.py
src/shearline/: bounds.py  (+8 more)
tests/: test_bounds.py  test_cache.py  test_envelope.py  test_environment.py  test_geo.py  test_historical.py  test_http_infra.py  test_iem.py  test_lightning.py  test_mrms.py  test_nexrad_stations.py  test_nws.py  test_schema_lock.py  test_server.py  test_spc.py  test_threat.py  test_trend.py  tools_schema_snapshot.json
(+15 files in other folders)
